# gl-telegram-bot-pao

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: __init__.py  schemas.py
app/api/routes/: alerts.py  auth.py  customers.py  dashboard.py  orders.py  settings.py  slots.py  users.py
app/bot/: buy_handler.py  order_flow.py  order_handler.py  sell_handler.py
app/config/: settings.py
app/core/: config.py  database.py  security.py
app/db/: base.py
app/models/: alert.py  customer.py  inventory_transaction.py  order.py  slot_row.py  slot_table.py  telegram_group.py  user.py
app/services/: db.py  order_service.py  promotion_service.py  slot_service.py  whitelist_service.py
app/utils/: helpers.py
frontend/: Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Card.tsx  ComingSoon.tsx  IconBtn.tsx  MiniSpark.tsx  Pagination.tsx  SearchInput.tsx  StatCard.tsx  StatusBadge.tsx  Toast.tsx  Toggle.tsx
frontend/src/data/: api.ts  mockData.ts  navigation.ts
frontend/src/layouts/: Sidebar.tsx  Topbar.tsx
frontend/src/pages/: AlertsPage.tsx  DashboardPage.tsx  PhysicalOrdersPage.tsx  PlatformOrdersPage.tsx  SettingsPage.tsx  SlotsPage.tsx  UsersPage.tsx
